# taura-2.0

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MASTER_PLAN.md  README.md  config.yaml  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/workflows/: ci.yml
app/api/: config.py  embeddings.py  preprocessing.py  split.py
app/api/embedding/: processor.py  trainer.py  utils.py
app/morphology/: core.py  service.py
app/preprocessing/bible/: orchestrator.py
app/preprocessing/bible/acts/: core.py  service.py
app/preprocessing/bible/base/: core.py  structure.py
app/preprocessing/bible/colossians/: __init__.py  core.py  service.py
app/preprocessing/bible/corinthians1/: core.py  service.py
app/preprocessing/bible/corinthians2/: core.py  service.py
app/preprocessing/bible/ecclesiastes/: core.py  service.py
app/preprocessing/bible/ephesians/: __init__.py  core.py  service.py
app/preprocessing/bible/galatians/: core.py  service.py
app/preprocessing/bible/genesis/: core.py  service.py
app/preprocessing/bible/jeremiah/: core.py  service.py
app/preprocessing/bible/john/: core.py  service.py
app/preprocessing/bible/luke/: core.py  service.py
app/preprocessing/monolingual/: core.py
app/serve/: main.py
app/serve/static/: main.js  style.css
app/serve/templates/: index.html
app/shared/: config.py  logger.py
app/tests/: conftest.py  core.py  givenpy.py  test_api.py  test_candidates_endpoint.py  test_preprocessing.py  test_split.py
app/tests/unit/: test_embeddings.py  test_embeddings_parallel.py  test_evaluation.py
configs/: embedding.yml
data/parallel/: acts_aligned.csv  colossians_aligned.csv  corinthians1_aligned.csv  corinthians2_aligned.csv  ecclesiastes_aligned.csv  ephesians_aligned.csv  galatians_aligned.csv  genesis_aligned.csv  jeremiah_aligned.csv  john_aligned.csv  luke_aligned.csv  mark_aligned.csv  matthew_aligned.csv  philippians_aligned.csv  proverbs_aligned.csv  psalms_aligned.csv  romans_aligned.csv  thessalonians1_aligned.csv
data/parallel/agriculture/: avocado.csv  banana.csv  cabbage.csv  coffee.csv  dairy.csv  mango.csv  potato.csv  poultry.csv
data/splits/: test.tsv  train.tsv  val.tsv
docs/: Taura_A_Case_Study_in_Low_Resource_Bantu_Translation.md
docs/superpowers/plans/: 2026-06-21-migrate-poetry-to-uv.md  2026-06-21-model-scaling-and-optimization.md
docs/superpowers/specs/: 2026-06-21-phase2-roadmap-design.md
models/: evaluation_metrics.json  sentencepiece.model  sentencepiece.vocab
notebooks/james/: machine_translation_report.md
scripts/: build_monolingual_corpus.py  build_seed_dictionary.py  collect_data.py  evaluate.py  init_project.py  prepare_dataset.py  refine_alignment.py  train_embeddings.py  tune_hyperparameters.py  verify_nn.py  verify_semantic_nn.py
scripts/preprocessing/: README.md  README_BIBLE_UTILS.md  bible_cli.py  bible_parser.py  bible_utils.py
scripts/preprocessing/structure/: README.md  __init__.py  bible_books.json  generate_complete_structure.py
session-details/: progress_update_2026-06-20.md  progress_update_2026-06-21.md  progress_update_2026-06-23.md
session-details/example-translation-recipe/: fasttext_translation_recipe.md
tests/: core.py  test_acts_parser.py  test_api.py  test_candidates_endpoint.py  test_colossians_parser.py  test_corinthians1_parser.py  test_corinthians2_parser.py  test_ecclesiastes_parser.py  test_ephesians_parser.py  test_galatians_parser.py  test_genesis_parser.py  test_john_parser.py  test_luke_parser.py  test_mark_parser.py  test_matthew_parser.py  test_philippians_parser.py  test_preprocessing.py  test_proverbs_parser.py  test_psalms_parser.py  test_romans_parser.py  test_thessalonians1_parser.py
tests/unit/: test_embeddings.py  test_embeddings_parallel.py  test_evaluation.py  test_morphology.py
(+20 files in other folders)
