[project]
name = "taura"
version = "2.0.0"
description = "Machine translation model for translating Kikuyu to English"
authors = [{name = "James Wanjku", email = "james544wanjiku@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.2",
    "mypy>=1.8.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.6.2",
    "ruff==0.11.5",
]
docs = [
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"