[project]
name = "taura"
version = "2.0.0"
description = "Machine translation model for translating Kikuyu to English"
authors = [{ name = "James Wanjku", email = "james544wanjiku@gmail.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Repository = "https://github.com/garnet-owl/taura-2.0"

[dependency-groups]
dev = [
    "pytest>=8.0.2,<9",
    "mypy>=1.8.0,<2",
    "pytest-cov>=4.1.0,<5",
    "pre-commit>=3.6.2,<4",
    "ruff==0.11.5",
]
docs = [
    "sphinx>=7.2.6,<8",
    "sphinx-rtd-theme>=2.0.0,<3",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["app"]
module-root = ""

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
