[project]
name = "taura"
version = "2.0.0"
description = "Machine translation model for translating Kikuyu to English"
authors = [{ name = "James Wanjku", email = "james544wanjiku@gmail.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
license = "MIT"
dependencies = [
    "sacrebleu>=2.6.0",
    "fastapi>=0.110.0",
    "fasttext-wheel>=0.9.2",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.28.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "tabulate>=0.9.0",
    "pandas>=3.0.3",
    "openpyxl>=3.1.5",
    "huggingface-hub>=1.20.1",
    "sentencepiece>=0.2.1",
    "cupy-cuda12x>=14.1.1",
    "httpx2>=2.4.0",
    "torch>=2.12.1",
    "pymupdf>=1.27.2.3",
    "datasets<3.0.0",
    "ijson>=3.5.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/garnet-owl/taura-2.0"

[dependency-groups]
dev = [
    "pytest>=8.0.2,<9",
    "mypy>=1.8.0,<2",
    "pytest-cov>=4.1.0,<5",
    "pre-commit>=3.6.2,<4",
    "ruff==0.11.5",
    "givenpy>=1.0.5",
    "pyhamcrest>=2.1.0",
]
docs = [
    "sphinx>=7.2.6,<8",
    "sphinx-rtd-theme>=2.0.0,<3",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
